fix overflowing text

--- a/blog/blog-styles.css
+++ b/blog/blog-styles.css
@@ -1,3 +1,7 @@
+div{
+  word-wrap: normal;
+}
+
 code{
   white-space: pre;
   margin-bottom: 30px;
